[gd_scene load_steps=21 format=2]

[ext_resource path="res://StartMenu.gd" type="Script" id=1]
[ext_resource path="res://sound/start/hover_button_sound.wav" type="AudioStream" id=2]
[ext_resource path="res://sound/Клик в меню.wav" type="AudioStream" id=3]
[ext_resource path="res://img/start/бесконечный режим_3.png" type="Texture" id=4]
[ext_resource path="res://img/start/бесконечный режим_1.png" type="Texture" id=5]
[ext_resource path="res://img/start/бесконечный режим_2.png" type="Texture" id=6]
[ext_resource path="res://img/start/продолжить.png" type="Texture" id=7]
[ext_resource path="res://img/start/настройки.png" type="Texture" id=8]
[ext_resource path="res://img/start/дополнительно.png" type="Texture" id=9]
[ext_resource path="res://img/Интерфейс/новая игра2.png" type="Texture" id=10]
[ext_resource path="res://img/start/plague doctor label.png" type="Texture" id=11]
[ext_resource path="res://img/Интерфейс/новая игра3.png" type="Texture" id=12]
[ext_resource path="res://img/Интерфейс/новая игра.png" type="Texture" id=13]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 6 ), ExtResource( 4 ) ],
"loop": true,
"name": "Basic_Hover_Click",
"speed": 5.0
} ]

[node name="StartMenu" type="Node"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="sign" type="Sprite" parent="."]
visible = false
position = Vector2( 640, 208 )
scale = Vector2( 0.537447, 0.537447 )

[node name="Title" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.894118 )
position = Vector2( 643, 192 )
scale = Vector2( 0.619341, 0.619341 )
texture = ExtResource( 11 )

[node name="ButtonContinue" type="Button" parent="."]
anchor_left = -2.38419e-08
anchor_top = -0.00444438
anchor_bottom = -0.00444438
margin_left = 241.67
margin_top = 273.0
margin_right = 1383.67
margin_bottom = 509.0
rect_scale = Vector2( 0.35, 0.35 )
rect_pivot_offset = Vector2( 312, 80 )
custom_styles/disabled = SubResource( 1 )
disabled = true
icon = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonNG" type="TextureButton" parent="."]
margin_left = 240.0
margin_top = 377.0
margin_right = 1382.0
margin_bottom = 613.0
rect_scale = Vector2( 0.35, 0.35 )
rect_pivot_offset = Vector2( 312, 80 )
texture_normal = ExtResource( 13 )
texture_pressed = ExtResource( 12 )
texture_hover = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonEM" type="Button" parent="."]
margin_left = 445.2
margin_top = 531.0
margin_right = 829.2
margin_bottom = 595.0
rect_pivot_offset = Vector2( 312, 80 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EMSprite" type="AnimatedSprite" parent="ButtonEM"]
position = Vector2( 196, 39.3404 )
scale = Vector2( 0.35, 0.35 )
frames = SubResource( 7 )
animation = "Basic_Hover_Click"

[node name="ButtonHovered" type="AudioStreamPlayer" parent="ButtonEM"]
stream = ExtResource( 2 )

[node name="ButtonPressed" type="AudioStreamPlayer" parent="ButtonEM"]
stream = ExtResource( 3 )

[node name="ButtonSettings" type="Button" parent="."]
margin_left = 240.0
margin_top = 573.0
margin_right = 1382.0
margin_bottom = 809.0
rect_scale = Vector2( 0.35, 0.35 )
rect_pivot_offset = Vector2( 312, 80 )
custom_styles/disabled = SubResource( 1 )
disabled = true
icon = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonExtras" type="Button" parent="."]
margin_left = 240.0
margin_top = 673.0
margin_right = 1382.0
margin_bottom = 909.0
rect_scale = Vector2( 0.35, 0.35 )
rect_pivot_offset = Vector2( 312, 80 )
custom_styles/disabled = SubResource( 1 )
disabled = true
icon = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="mouse_entered" from="ButtonNG" to="." method="_on_ButtonNG_mouse_entered"]
[connection signal="pressed" from="ButtonNG" to="." method="_on_ButtonNG_pressed"]
[connection signal="mouse_entered" from="ButtonEM" to="." method="_on_ButtonEM_mouse_entered"]
[connection signal="mouse_exited" from="ButtonEM" to="." method="_on_ButtonEM_mouse_exited"]
[connection signal="pressed" from="ButtonEM" to="." method="_on_ButtonEM_pressed"]
